src/ruyi_parser.c
//
//  ruyi_parser.c
//  ruyi
//
//  Created by Songli Huang on 2019/8/29.
//  Copyright © 2019 Songli Huang. All rights reserved.
//

#include "ruyi_parser.h"
#include "ruyi_basics.h"
#include "ruyi_lexer.h"
#include "ruyi_vector.h"
#include "ruyi_error.h"

static ruyi_ast* create_ast_string_by_token(ruyi_lexer_reader *reader, ruyi_ast_type type, ruyi_token **out_token) {
    ruyi_ast * ret;
    ruyi_token *token = ruyi_lexer_reader_next_token(reader);
    ret = ruyi_ast_create_with_unicode(type, token->value.str_value);
    if (out_token == NULL) {
        ruyi_lexer_token_destroy(token);
    } else {
        *out_token = token;
    }
    return ret;
}

static ruyi_ast* create_ast_by_consume_token_string(ruyi_lexer_reader *reader, ruyi_ast_type type) {
    return create_ast_string_by_token(reader, type, NULL);
}

static void tokens_push_back_at_front(ruyi_lexer_reader *reader, ruyi_vector *tokens) {
    UINT32 i, len;
    ruyi_value temp;
    ruyi_token *token;
    len = ruyi_vector_length(tokens);
    for (i = len; i > 0; i--) {
        ruyi_vector_get(tokens, i - 1, &temp);
        token = (ruyi_token*)temp.data.ptr;
        ruyi_lexer_reader_push_front(reader, token);
    }
    ruyi_vector_destroy(tokens);
}


static
ruyi_error* assignment_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* field_access_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* array_access(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* array_type(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* map_type(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* reference_type(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* unary_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* not_plus_minus_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* primitive_type(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* type(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* unary_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* name(ruyi_lexer_reader *reader, ruyi_ast **out_ast, ruyi_vector* out_tokens);

static
ruyi_error* array_creation(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* map_creation(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* primary_no_new_collection(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* primary(ruyi_lexer_reader *reader, ruyi_ast **out_ast);

static
ruyi_error* type_cast(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <type cast> ::= DOT RPARAN <type> RPARAN
    ruyi_error *err;
    ruyi_ast *type_ast = NULL;
    ruyi_token *dot_token = NULL;
    if (ruyi_lexer_reader_peek_token_type(reader) != Ruyi_tt_DOT) {
        *out_ast = NULL;
        return NULL;
    }
    dot_token = ruyi_lexer_reader_next_token(reader);
    if (!ruyi_lexer_reader_consume_token_if_match(reader, Ruyi_tt_LPAREN, NULL)) {
        ruyi_lexer_reader_push_front(reader, dot_token);
        *out_ast = NULL;
        return NULL;
    }
    ruyi_lexer_token_destroy(dot_token);
    if ((err = type(reader, &type_ast)) != NULL) {
        return err;
    }
    if (type_ast == NULL) {
        err = ruyi_error_by_parser(reader, "type-cast miss type after '('");
        goto type_castion_on_error;
    }
    if (!ruyi_lexer_reader_consume_token_if_match(reader, Ruyi_tt_RPAREN, NULL)) {
        err = ruyi_error_by_parser(reader, "type-cast miss ')' after type");
        goto type_castion_on_error;
    }
    *out_ast = type_ast;
    return NULL;
type_castion_on_error:
    if (type_ast != NULL) {
        ruyi_ast_destroy(type_ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* postfix_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <postfix expression> ::= ( <field access expression> | <name> ) (DEC | INC | <type cast>) ?
    ruyi_error *err;
    ruyi_ast *ast = NULL;
    ruyi_ast *type_cast_ast = NULL;
    if ((err = primary(reader, &ast)) != NULL) {
        *out_ast = NULL;
        return err;
    }
    if (ast == NULL) {
        if ((err = name(reader, &ast, NULL)) != NULL) {
            *out_ast = NULL;
            return err;
        }
        if (ast == NULL) {
            *out_ast = NULL;
            return NULL;
        }
    }
    if (ruyi_lexer_reader_consume_token_if_match(reader, Ruyi_tt_DEC, NULL)) {
        *out_ast = ruyi_ast_create(Ruyi_at_postfix_dec_expression);
        ruyi_ast_add_child(*out_ast, ast);
        return NULL;
    } else if (ruyi_lexer_reader_consume_token_if_match(reader, Ruyi_tt_INC, NULL)) {
        *out_ast = ruyi_ast_create(Ruyi_at_postfix_inc_expression);
        ruyi_ast_add_child(*out_ast, ast);
        return NULL;
    } else {
        if ((err = type_cast(reader, &type_cast_ast)) != NULL) {
            *out_ast = NULL;
            return err;
        }
        if (type_cast_ast == NULL) {
            *out_ast = ast;
            return NULL;
        } else {
            *out_ast = ruyi_ast_create(Ruyi_at_type_cast_expression);
            ruyi_ast_add_child(*out_ast, ast);
            ruyi_ast_add_child(*out_ast, type_cast_ast);
            return NULL;
        }
    }
}

static
ruyi_error* not_plus_minus_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <not plus minus expression> ::= BIT_INVERSE <unary expression> | LOGIC_NOT <unary expression> | <postfix expression>
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *target_ast;
    ruyi_token_type token_type;
    token_type = ruyi_lexer_reader_peek_token_type(reader);
    if  (token_type == Ruyi_tt_BIT_INVERSE) {
        ruyi_lexer_reader_consume_token(reader);
        if ((err = unary_expression(reader, &target_ast)) != NULL) {
            return err;
        }
        if (target_ast == NULL) {
            return ruyi_error_by_parser(reader, "miss expression after '~'");
        }
        ast = ruyi_ast_create(Ruyi_at_bit_inverse_expression);
        ruyi_ast_add_child(ast, target_ast);
        *out_ast = ast;
        return NULL;
    }
    if (token_type == Ruyi_tt_LOGIC_NOT) {
        ruyi_lexer_reader_consume_token(reader);
        if ((err = unary_expression(reader, &target_ast)) != NULL) {
            return err;
        }
        if (target_ast == NULL) {
            return ruyi_error_by_parser(reader, "miss expression after '!'");
        }
        ast = ruyi_ast_create(Ruyi_at_logic_not_expression);
        ruyi_ast_add_child(ast, target_ast);
        *out_ast = ast;
        return NULL;
    }
    return postfix_expression(reader, out_ast);
}

static
ruyi_error* unary_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <unary expression> ::= ADD <unary expression> | SUB <unary expression> | <not plus minus expression>
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *op_ast = NULL;
    ruyi_ast *target_ast = NULL;
    ruyi_token_type token_type;
    token_type = ruyi_lexer_reader_peek_token_type(reader);
    switch (token_type) {
        case Ruyi_tt_ADD:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_add);
            break;
        case Ruyi_tt_SUB:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_sub);
            break;
        default:
            op_ast = NULL;
            break;
    }
    if (op_ast != NULL) {
        if ((err = unary_expression(reader, &target_ast)) != NULL) {
            goto unary_expression_on_error;
        }
        if (target_ast == NULL) {
            err = ruyi_error_by_parser(reader, "miss expression after '+' or '-'");
            goto unary_expression_on_error;
        }
        ast = ruyi_ast_create(Ruyi_at_unary_expression);
        ruyi_ast_add_child(ast, op_ast);
        ruyi_ast_add_child(ast, target_ast);
        *out_ast = ast;
        return NULL;
    }
    return not_plus_minus_expression(reader, out_ast);
unary_expression_on_error:
    if (op_ast != NULL) {
        ruyi_ast_destroy(op_ast);
    }
    if (target_ast != NULL) {
        ruyi_ast_destroy(target_ast);
    }
    return err;
}

static
ruyi_error* multiplicative_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <multiplicative expression> ::= <unary expression> ((MUL | DIV | MOD) <unary expression>)*
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *left_unary_expr_ast = NULL;
    ruyi_ast *right_unary_expr_ast = NULL;
    ruyi_ast *op_ast = NULL;
    ruyi_token_type token_type;
    if ((err = unary_expression(reader, &left_unary_expr_ast)) != NULL) {
        return err;
    }
    if (left_unary_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    while (TRUE) {
        token_type = ruyi_lexer_reader_peek_token_type(reader);
        switch (token_type) {
            case Ruyi_tt_MUL:
                ruyi_lexer_reader_consume_token(reader);
                op_ast = ruyi_ast_create(Ruyi_at_op_mul);
                break;
            case Ruyi_tt_DIV:
                ruyi_lexer_reader_consume_token(reader);
                op_ast = ruyi_ast_create(Ruyi_at_op_div);
                break;
            case Ruyi_tt_MOD:
                ruyi_lexer_reader_consume_token(reader);
                op_ast = ruyi_ast_create(Ruyi_at_op_mod);
                break;
            default:
                op_ast = NULL;
                break;
        }
        if (op_ast == NULL) {
            break;
        }
        if ((err = multiplicative_expression(reader, &right_unary_expr_ast)) != NULL) {
            goto multiplicative_expression_on_error;
        }
        if (right_unary_expr_ast == NULL) {
            err = ruyi_error_by_parser(reader, "need expression after '*', '/' or '%'");
            goto multiplicative_expression_on_error;
        }
        ast = ruyi_ast_create(Ruyi_at_multiplicative_expression);
        ruyi_ast_add_child(ast, left_unary_expr_ast);
        ruyi_ast_add_child(ast, op_ast);
        ruyi_ast_add_child(ast, right_unary_expr_ast);
        left_unary_expr_ast = ast;
    }
    *out_ast = left_unary_expr_ast;
    return NULL;
multiplicative_expression_on_error:
    if (left_unary_expr_ast != NULL) {
        ruyi_ast_destroy(left_unary_expr_ast);
    }
    if (right_unary_expr_ast != NULL) {
        ruyi_ast_destroy(right_unary_expr_ast);
    }
    if (op_ast != NULL) {
        ruyi_ast_destroy(op_ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* additive_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <additive expression> ::= <multiplicative expression> ((ADD | SUB) <multiplicative expression>)*
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *left_mul_expr_ast = NULL;
    ruyi_ast *right_mul_expr_ast = NULL;
    ruyi_ast *op_ast = NULL;
    ruyi_token_type token_type;
    if ((err = multiplicative_expression(reader, &left_mul_expr_ast)) != NULL) {
        return err;
    }
    if (left_mul_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    while (TRUE) {
        token_type = ruyi_lexer_reader_peek_token_type(reader);
        switch (token_type) {
            case Ruyi_tt_ADD:
                ruyi_lexer_reader_consume_token(reader);
                op_ast = ruyi_ast_create(Ruyi_at_op_add);
                break;
            case Ruyi_tt_SUB:
                ruyi_lexer_reader_consume_token(reader);
                op_ast = ruyi_ast_create(Ruyi_at_op_sub);
                break;
            default:
                op_ast = NULL;
                break;
        }
        if (op_ast == NULL) {
            break;
        }
        if ((err = multiplicative_expression(reader, &right_mul_expr_ast)) != NULL) {
            goto additive_expression_on_error;
        }
        if (right_mul_expr_ast == NULL) {
            err = ruyi_error_by_parser(reader, "need expression after '+' or '-'");
            goto additive_expression_on_error;
        }
        ast = ruyi_ast_create(Ruyi_at_additive_expression);
        ruyi_ast_add_child(ast, left_mul_expr_ast);
        ruyi_ast_add_child(ast, op_ast);
        ruyi_ast_add_child(ast, right_mul_expr_ast);
        left_mul_expr_ast = ast;
    }
    *out_ast = left_mul_expr_ast;
    return NULL;
additive_expression_on_error:
    if (left_mul_expr_ast != NULL) {
        ruyi_ast_destroy(left_mul_expr_ast);
    }
    if (right_mul_expr_ast != NULL) {
        ruyi_ast_destroy(right_mul_expr_ast);
    }
    if (op_ast != NULL) {
        ruyi_ast_destroy(op_ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* shift_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <shift expression> ::= <additive expression> ((SHFT_LEFT | SHFT_RIGHT) <additive expression>) ?
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *add_expr_ast = NULL;
    ruyi_ast *right_add_expr_ast = NULL;
    ruyi_ast *op_ast = NULL;
    ruyi_token_type token_type;
    if ((err = additive_expression(reader, &add_expr_ast)) != NULL) {
        return err;
    }
    if (add_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    token_type = ruyi_lexer_reader_peek_token_type(reader);
    switch (token_type) {
        case Ruyi_tt_SHFT_LEFT:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_shift_left);
            break;
        case Ruyi_tt_SHFT_RIGHT:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_shift_right);
            break;
        default:
            op_ast = NULL;
            break;
    }
    if (op_ast == NULL) {
        *out_ast = add_expr_ast;
        return NULL;
    }
    if ((err = additive_expression(reader, &right_add_expr_ast)) != NULL) {
        goto shift_expression_on_error;
    }
    if (right_add_expr_ast == NULL) {
        err = ruyi_error_by_parser(reader, "need expression after shift operator");
        goto shift_expression_on_error;
    }
    ast = ruyi_ast_create(Ruyi_at_shift_expression);
    ruyi_ast_add_child(ast, add_expr_ast);
    ruyi_ast_add_child(ast, op_ast);
    ruyi_ast_add_child(ast, right_add_expr_ast);
    *out_ast = ast;
    return NULL;
shift_expression_on_error:
    if (add_expr_ast != NULL) {
        ruyi_ast_destroy(add_expr_ast);
    }
    if (right_add_expr_ast != NULL) {
        ruyi_ast_destroy(right_add_expr_ast);
    }
    if (op_ast != NULL) {
        ruyi_ast_destroy(op_ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* relational_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <relational expression> ::= <shift expression> ((KW_INSTANCEOF <reference type>) | ((LT | GT | LTE | GTE) <shift expression>)) ?
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *shift_expr_ast = NULL;
    ruyi_ast *right_shift_expr_ast = NULL;
    ruyi_ast *ref_type_ast = NULL;
    ruyi_ast *op_ast = NULL;
    ruyi_token_type token_type;
    if ((err = shift_expression(reader, &shift_expr_ast)) != NULL) {
        return err;
    }
    if (shift_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    token_type = ruyi_lexer_reader_peek_token_type(reader);
    if (token_type == Ruyi_tt_KW_INSTANCEOF) {
        ruyi_lexer_reader_consume_token(reader); // consume instanceof
        if ((err = reference_type(reader, &ref_type_ast)) != NULL) {
            goto relational_expression_on_error;
        }
        if (ref_type_ast == NULL) {
            err = ruyi_error_by_parser(reader, "miss type-name after 'instanceof'");
            goto relational_expression_on_error;
        }
        ast = ruyi_ast_create(Ruyi_at_relational_expression);
        ruyi_ast_add_child(ast, shift_expr_ast);
        ruyi_ast_add_child(ast, ruyi_ast_create(Ruyi_at_op_instanceof));
        ruyi_ast_add_child(ast, ref_type_ast);
        *out_ast = ast;
        return NULL;
    }
    switch (token_type) {
        case Ruyi_tt_LT:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_lt);
            break;
        case Ruyi_tt_GT:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_gt);
            break;
        case Ruyi_tt_LTE:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_lte);
            break;
        case Ruyi_tt_GTE:
            ruyi_lexer_reader_consume_token(reader);
            op_ast = ruyi_ast_create(Ruyi_at_op_gte);
            break;
        default:
            op_ast = NULL;
            break;
    }
    if (op_ast == NULL) {
        *out_ast = shift_expr_ast;
        return NULL;
    }
    if ((err = shift_expression(reader, &right_shift_expr_ast)) != NULL) {
        goto relational_expression_on_error;
    }
    if (right_shift_expr_ast == NULL) {
        err = ruyi_error_by_parser(reader, "need expression after compare operator");
        goto relational_expression_on_error;
    }
    ast = ruyi_ast_create(Ruyi_at_relational_expression);
    ruyi_ast_add_child(ast, shift_expr_ast);
    ruyi_ast_add_child(ast, op_ast);
    ruyi_ast_add_child(ast, right_shift_expr_ast);
    *out_ast = ast;
    return NULL;
relational_expression_on_error:
    if (shift_expr_ast != NULL) {
        ruyi_ast_destroy(shift_expr_ast);
    }
    if (right_shift_expr_ast != NULL) {
        ruyi_ast_destroy(right_shift_expr_ast);
    }
    if (op_ast != NULL) {
        ruyi_ast_destroy(op_ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* equality_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <equality expression> ::= <relational expression> ((EQUALS | NOT_EQUALS) <relational expression>)?
    ruyi_error *err;
    ruyi_ast *ast;
    ruyi_ast *rel_expr_ast = NULL;
    ruyi_token_type token_type;
    if ((err = relational_expression(reader, &rel_expr_ast)) != NULL) {
        return err;
    }
    if (rel_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    token_type = ruyi_lexer_reader_peek_token_type(reader);
    if (token_type != Ruyi_tt_EQUALS && token_type != Ruyi_tt_NOT_EQUALS) {
        *out_ast = rel_expr_ast;
        return NULL;
    }
    ruyi_lexer_reader_consume_token(reader); // consume EQUALS or NOT_EQUALS
    ast = ruyi_ast_create(Ruyi_at_equality_expression);
    ruyi_ast_add_child(ast, rel_expr_ast);
    switch (token_type) {
        case Ruyi_tt_EQUALS:
            ruyi_ast_add_child(ast, ruyi_ast_create(Ruyi_at_op_equals));
            break;
        case Ruyi_tt_NOT_EQUALS:
            ruyi_ast_add_child(ast, ruyi_ast_create(Ruyi_at_op_not_equals));
            break;
        default:
            // may not reach here
            break;
    }
    if ((err = relational_expression(reader, &rel_expr_ast)) != NULL) {
        goto equality_expression_on_error;
    }
    if (rel_expr_ast == NULL) {
        if (Ruyi_tt_EQUALS == token_type) {
            err = ruyi_error_by_parser(reader, "miss expression after '=='");
        } else {
            err = ruyi_error_by_parser(reader, "miss expression after '!='");
        }
        goto equality_expression_on_error;
    }
    ruyi_ast_add_child(ast, rel_expr_ast);
    *out_ast = ast;
    return NULL;
equality_expression_on_error:
    if (ast != NULL) {
        ruyi_ast_destroy(ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* bit_and_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <bit and expression> ::= <equality expression> (BIT_AND <equality expression>)*
    ruyi_error *err;
    ruyi_ast *ast = NULL;
    ruyi_ast *eq_expr_ast = NULL;
    if ((err = equality_expression(reader, &eq_expr_ast)) != NULL) {
        return err;
    }
    if (eq_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    if (ruyi_lexer_reader_peek_token_type(reader) != Ruyi_tt_BIT_AND) {
        *out_ast = eq_expr_ast;
        return NULL;
    }
    ast = ruyi_ast_create(Ruyi_at_bit_and_expression);
    ruyi_ast_add_child(ast, eq_expr_ast);
    
    while (TRUE) {
        if (!ruyi_lexer_reader_consume_token_if_match(reader, Ruyi_tt_BIT_AND, NULL)) {
            break;
        }
        if ((err = equality_expression(reader, &eq_expr_ast)) != NULL) {
            goto bit_and_expression_on_error;
        }
        if (eq_expr_ast == NULL) {
            err = ruyi_error_by_parser(reader, "miss expression after '&'");
            goto bit_and_expression_on_error;
        }
        ruyi_ast_add_child(ast, eq_expr_ast);
    }
    *out_ast = ast;
    return NULL;
bit_and_expression_on_error:
    if (ast != NULL) {
        ruyi_ast_destroy(ast);
    }
    *out_ast = NULL;
    return err;
}

static
ruyi_error* bit_or_expression(ruyi_lexer_reader *reader, ruyi_ast **out_ast) {
    // <bit or expression> ::= <bit and expression> (BIT_OR <bit and expression>)*
    ruyi_error *err;
    ruyi_ast *ast = NULL;
    ruyi_ast *bit_and_expr_ast = NULL;
    if ((err = bit_and_expression(reader, &bit_and_expr_ast)) != NULL) {
        return err;
    }
    if (bit_and_expr_ast == NULL) {
        *out_ast = NULL;
        return NULL;
    }
    if (ruyi_lexer_reader_peek_token_type(reader) != Ruyi_tt_BIT_OR) {
        *out_ast = bit_and_expr_ast;
        return NULL;
    }
    ast = ruyi_ast_create(Ruyi_at_bit_or_expression);
    ruyi_ast_add_child(ast, bit_and_expr_ast);
    
    while (TRUE) {
        if (!ruyi_lexer_reader_consume_token_if_match(reader, Ruyi_tt_BIT_OR, NULL)) {
            break;
        }
        if ((err = bit_and_expression(reader, &bit_and_expr_ast)) != NULL) {
            goto bit_or_expression_on_error;
        }
        if (bit_and_expr_ast == NULL) {
            err = ruyi_error_by_parser(reader, "miss expression after '|'");
            goto bit_or_expression_on_error;
        }
        ruyi_ast_add_child(ast, bit_and_expr_ast);
    }
    *out_ast = ast;
    return NULL;
bit_or_expression_on_error:
    if (ast != NULL) {
        ruyi_ast_destroy(ast);
    }
    *out_ast = NULL;
    return err;
}
